--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,16 @@
-html,
+html {
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
+*, *::after,*::before {
+  box-sizing: inherit;
 }
-
-* {
-  box-sizing: border-box;
+p {
+  margin: 0px; 
 }
