--- a/components/formulario/moduleForm.module.css
+++ b/components/formulario/moduleForm.module.css
@@ -23,3 +23,9 @@
     color: white;
     font-weight: 700;
 }
+.mensajeError {
+    margin-bottom: 2px;
+    font-size: 12px;
+    color: red;
+    font-style: italic;
+}
