--- a/components/frase/Frase.module.css
+++ b/components/frase/Frase.module.css
@@ -2,16 +2,18 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     padding: 15px;
-    max-width: 400px;
-    margin: 0% auto;
+    max-width: 500px;
+    margin: auto;
+    height: 80vh;
 }
 .seccionPrincipal p {
     text-align: center;
     color: #ffce84;
 }
 .fraseMotivadora {
-    font-size: 20px;
+    font-size: 40px;
     font-weight: 600;
 }
 .iconoClever {
