agregar seccion de contacto y el envio del form

--- a/components/footer/Footer.module.css
+++ b/components/footer/Footer.module.css
@@ -49,6 +49,10 @@
     color: white;
     font-weight: 700;
 }
+.enlace:hover, .mc:hover {
+    color: #ffce84;
+    transition: color 0.3s ease-in;
+} 
 .divIconos {
 
 }
