--- a/components/navbar/NavBar.module.css
+++ b/components/navbar/NavBar.module.css
@@ -12,7 +12,6 @@
     right: 0px;
     transition: right 0.5s ease-in-out;
 }
-
 .divCancelar {
     position: absolute;
     top: 20px;
@@ -23,6 +22,7 @@
     flex-direction: column;
     gap: 20px;
     margin: 50px 0px;
+    padding: 0px 25px;
 }
 .li {
     list-style: none;
@@ -30,5 +30,36 @@
 .enlace {
     text-decoration: none;
     color: black;
-    font-weight: 700;
+    text-transform: uppercase;
+}
+.lineaDivisoria {
+    width: 100%;
+    height: 0.5px;
+    background-color: rgb(174, 174, 174);
+}
+@media all and (min-width:800px) {
+    .nav {
+        position: relative;
+        right: 0px;
+        background-color: initial;
+        width: 500px;
+    }
+    .ul {
+        flex-direction: row;
+        margin: 0%;
+        justify-content: center;
+        align-items: center;
+        gap: 40px;
+    }
+    .divCancelar {
+        display: none;
+    }
+    .enlace { 
+        font-size: 20px;
+        font-weight: 400;
+    }
+    .enlace:hover {
+        color: white;
+        transition: color 0.3s ease-in;
+    } 
 }
