--- a/components/cursos/cursos.module.css
+++ b/components/cursos/cursos.module.css
@@ -47,6 +47,30 @@
 .masInfo:hover {
     color: white;
 }
+.sectionActividades {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: #f9c26f;
+    padding: 40px 20px;
+    gap: 30px;
+}
+.titleActividades {
+    font-size: 25px;
+    text-transform: uppercase;
+    margin-bottom: 0%;
+}
+.subtitleActividades {
+    text-align: center;
+    font-weight: 200;
+    max-width: 400px;
+}
+.divActividades {
+    width: 100%;
+    height: 200px;
+    border: 1px solid black;
+}
 @media all and (min-width:800px) {
     .h1 {
         margin-top: 50px;
@@ -73,5 +97,8 @@
     }
     .divMasInfo {
         margin-bottom: 50px;
+    }
+    .divActividades {
+        width: 60%;
     }
 }
