--- a/components/navbar/NavBar.module.css
+++ b/components/navbar/NavBar.module.css
@@ -60,6 +60,6 @@
     }
     .enlace:hover {
         color: white;
-        transition: color 0.3s ease-in;
+        transition: color 0.3s ease;
     } 
 }
