--- a/components/cursos/cursos.module.css
+++ b/components/cursos/cursos.module.css
@@ -69,7 +69,22 @@
 .divActividades {
     width: 100%;
     height: 200px;
-    border: 1px solid black;
+    position: relative;
+}
+.divSpan {
+    position: absolute;
+    width: 100%;
+    height: 40px;
+    background-color: rgba(0, 0, 0, 0.359);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 50%;
+}
+.spanPalabra {
+    color: white;
+    font-weight: 600;
+    font-size: 24px;
 }
 @media all and (min-width:800px) {
     .h1 {
@@ -99,6 +114,6 @@
         margin-bottom: 50px;
     }
     .divActividades {
-        width: 60%;
+        width: 40%;
     }
 }
